- Add archive-related queries in PostRepository. - Update PostResponseBody DTO to include isArchived field. - Remove unused PostStatusResponse DTO and UserCreateRequestBody DTO. - Implement archive/unarchive post functionality in PostService.