@@ -1,32 +1,35 @@
 package com.jk.blog.service.impl;
 
 import com.jk.blog.constants.AppConstants;
-import com.jk.blog.dto.*;
+import com.jk.blog.dto.PageableResponse;
 import com.jk.blog.dto.comment.CommentResponseBody;
+import com.jk.blog.dto.post.PostMapper;
 import com.jk.blog.dto.post.PostRequestBody;
 import com.jk.blog.dto.post.PostResponseBody;
-import com.jk.blog.entity.*;
+import com.jk.blog.entity.Category;
+import com.jk.blog.entity.Post;
+import com.jk.blog.entity.Tag;
+import com.jk.blog.entity.User;
+import com.jk.blog.exception.InvalidPostStateException;
 import com.jk.blog.exception.ResourceNotFoundException;
 import com.jk.blog.exception.UnAuthorizedException;
 import com.jk.blog.repository.*;
+import com.jk.blog.security.AuthenticationFacade;
 import com.jk.blog.service.PostService;
 import com.jk.blog.utils.AuthUtil;
-import com.jk.blog.utils.DateTimeUtil;
-import com.jk.blog.dto.post.PostMapper;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.Instant;
 import java.time.temporal.ChronoUnit;
-import java.util.*;
+import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -44,46 +47,36 @@ public class PostServiceImpl implements PostService {
     private CommentRepository commentRepository;
     @Autowired
     private ModelMapper modelMapper;
+    @Autowired
+    private AuthenticationFacade authenticationFacade;
 
     @Override
     @Transactional
     public PostResponseBody createPost(Long userId, PostRequestBody postRequestBody) {
-
         // Get the authenticated user
         User user = AuthUtil.getAuthenticatedUser();
         if (user == null) {
             throw new UnAuthorizedException("User must be logged in to create a post.");
         }
-        Category category = this.categoryRepository
-                                .findById(postRequestBody.getCategoryId())
-                                .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", postRequestBody.getCategoryId()));
+        Category category = fetchCategoryById(postRequestBody.getCategoryId());
 
         Post post = PostMapper.postRequestBodyToPost(postRequestBody, user, category);
 
-        // 🔹 Set member post status based on user role
-        post.setMemberPost(AuthUtil.userHasRole(user, "SUBSCRIBER"));
+        post.setImageUrl(postRequestBody.getImageUrl());
+        post.setVideoUrl(postRequestBody.getVideoUrl());
+        post.setMemberPost(authenticationFacade.hasAnyRole("SUBSCRIBER", "MODERATOR", "ADMIN"));
+        post.setLive(true);
+        post.setArchived(false);
+        post.setPostCreatedDate(Instant.now());
+        post.setPostLastUpdatedDate(Instant.now());
 
-        if (postRequestBody.getTagNames() != null && !postRequestBody.getTagNames().isEmpty()) {
-            Set<Tag> tags = postRequestBody.getTagNames().stream()
-                                           .map(tagName -> this.tagRepository.findByTagName(tagName)
-                                           .orElseGet(() -> this.tagRepository.save(new Tag(tagName))))
-                                           .collect(Collectors.toSet());
+        if (postRequestBody.getTagNames() != null) {
+            Set<Tag> tags = fetchOrCreateTags(postRequestBody.getTagNames());
             post.setTags(tags);
         }
 
-        post.setPostCreatedDate(Instant.now());
         Post savedPost = this.postRepository.save(post);
-        PostResponseBody postResponseBody = this.modelMapper.map(savedPost, PostResponseBody.class);
-
-        postResponseBody.setIsLive(savedPost.isLive());
-        postResponseBody.setMemberPost(savedPost.isMemberPost());
-
-        Set<String> tagNames = savedPost.getTags().stream()
-                                        .map(Tag::getTagName)
-                                        .collect(Collectors.toSet());
-        postResponseBody.setTagNames(tagNames);
-
-        return postResponseBody;
+        return PostMapper.postToPostResponseBody(savedPost);
     }
 
     @Override
@@ -92,6 +85,10 @@ public class PostServiceImpl implements PostService {
         Post existingPost = this.postRepository
                                 .findByPostIdAndIsLiveTrueAndIsPostDeletedFalse(postId)
                                 .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+
+        if (existingPost.isMemberPost() && !authenticationFacade.hasAnyRole("SUBSCRIBER", "MODERATOR", "ADMIN")) {
+            throw new UnAuthorizedException("You are not authorized to view this post.");
+        }
 
         PostResponseBody responseBody = PostMapper.postToPostResponseBody(existingPost);
 
@@ -107,71 +104,38 @@ public class PostServiceImpl implements PostService {
     @Transactional(readOnly = true)
     public PageableResponse<PostResponseBody> getAllPost(Integer pageNumber, Integer pageSize, String sortBy, String sortDirection) {
 
-        Sort sort = sortDirection.equalsIgnoreCase(AppConstants.SORT_DIR) ? Sort.by(sortBy).ascending() : Sort.by(sortBy).descending();
-        Pageable pageable = PageRequest.of(pageNumber, pageSize, sort);
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, resolveSort(sortBy, sortDirection));
 
-        // Get authenticated user
-        User user = AuthUtil.getAuthenticatedUser();
+        Page<Post> pagePost = authenticationFacade.hasAnyRole("SUBSCRIBER")
+                ? postRepository.findByIsLiveTrueAndIsPostDeletedFalse(pageable)
+                : postRepository.findPublicPosts(pageable);
 
-        Page<Post> pagePost;
-        if (user != null && AuthUtil.userHasRole(user, "SUBSCRIBER")) {
-            // If the user is a subscriber, fetch all posts
-            pagePost = this.postRepository.findByIsLiveTrueAndIsPostDeletedFalse(pageable);
-        } else {
-            // If the user is not a subscriber, fetch only public posts
-            pagePost = this.postRepository.findPublicPosts(pageable);
-        }
+        List<PostResponseBody> postResponseBodyList = pagePost.getContent()
+                .stream()
+                .map(existingPost -> {
+                    PostResponseBody postResponse = PostMapper.postToPostResponseBody(existingPost);
 
-        List<Post> postList = pagePost.getContent();
-        List<PostResponseBody> postResponseBodyList = postList.stream().map(existingPost -> {
-            PostResponseBody postResponse = PostMapper.postToPostResponseBody(existingPost);
+                    // Fetch a limited number of comments for each post, for example, the two most recent comments
+                    postResponse.setComments(fetchTopComments(existingPost));
 
-            // Fetch a limited number of comments for each post, for example, the two most recent comments
-            List<Comment> comments = this.commentRepository.findTop2ByPost_PostIdOrderByCommentCreatedDateDesc(existingPost.getPostId());
-            List<CommentResponseBody> commentResponses = comments.stream()
-                    .map(comment -> modelMapper.map(comment, CommentResponseBody.class))
-                    .collect(Collectors.toList());
-            postResponse.setComments(commentResponses);
+                    return postResponse;
+        }).toList();
 
-            return postResponse;
-        }).collect(Collectors.toList());
-
-        PageableResponse<PostResponseBody> pageableResponse = new PageableResponse<>();
-        pageableResponse.setContent(postResponseBodyList);
-        pageableResponse.setPageNumber(pagePost.getNumber());
-        pageableResponse.setSize(pagePost.getSize());
-        pageableResponse.setTotalElements(pagePost.getTotalElements());
-        pageableResponse.setTotalPages(pagePost.getTotalPages());
-        pageableResponse.setLastPage(pagePost.isLast());
-        return pageableResponse;
+        return buildPageableResponse(pagePost, postResponseBodyList);
     }
 
     @Override
     @Transactional
     public PostResponseBody updatePost(PostRequestBody postRequestBody, Long postId) {
 
-        Post existingPost = this.postRepository
-                                .findById(postId)
-                                .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+        Post existingPost = fetchUnArchivedAndLivePostById(postId);
 
-        Category category = this.categoryRepository
-                                .findById(postRequestBody.getCategoryId())
-                                .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", postRequestBody.getCategoryId()));
-        // Fetch or create new tags and update the association
-        Set<Tag> updatedTags = postRequestBody.getTagNames().stream()
-                                              .map(tagName -> tagRepository.findByTagName(tagName)
-                                              .orElseGet(() -> tagRepository.save(new Tag(tagName))))
-                                              .collect(Collectors.toSet());
-        // Set the updated tags to the post
-        existingPost.getTags().clear(); // Clear existing tags first
-        existingPost.getTags().addAll(updatedTags); // Add all the updated tags
+        validateModificationAuthorization(existingPost, "update");
 
-        existingPost.setPostTitle(postRequestBody.getTitle());
-        existingPost.setPostContent(postRequestBody.getContent());
-        existingPost.setImageUrl(postRequestBody.getImageUrl());
-        existingPost.setVideoUrl(postRequestBody.getVideoUrl());
+        // Update all properties
+        updatePostFields(existingPost, postRequestBody);
         existingPost.setPostLastUpdatedDate(Instant.now());
-        existingPost.setCategory(category);
+        
         Post updatedPost = this.postRepository.save(existingPost);
 
         return PostMapper.postToPostResponseBody(updatedPost);
@@ -180,36 +144,14 @@ public class PostServiceImpl implements PostService {
     @Override
     @Transactional
     public PostResponseBody patchPost(PostRequestBody postRequestBody, Long postId) {
-        Post existingPost = this.postRepository
-                                .findById(postId)
-                                .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
-        Category category = null;
-        if (postRequestBody.getCategoryId() != null) {
-            category = this.categoryRepository
-                    .findById(postRequestBody.getCategoryId())
-                    .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", postRequestBody.getCategoryId()));
 
-            existingPost.setCategory(category);
-        }
-        if (postRequestBody.getTagNames() != null && !postRequestBody.getTagNames().isEmpty()) {
-            // Fetch or create new tags and update the association
-            Set<Tag> updatedTags = postRequestBody.getTagNames().stream()
-                    .map(tagName -> tagRepository.findByTagName(tagName)
-                            .orElseGet(() -> tagRepository.save(new Tag(tagName))))
-                    .collect(Collectors.toSet());
-            // Set the updated tags to the post
-            existingPost.getTags().clear(); // Clear existing tags first
-            existingPost.getTags().addAll(updatedTags); // Add all the updated tags
-        }
-        if (postRequestBody.getTitle() != null && !postRequestBody.getTitle().isEmpty())
-            existingPost.setPostTitle(postRequestBody.getTitle());
-        if (postRequestBody.getContent() != null && !postRequestBody.getContent().isEmpty())
-            existingPost.setPostContent(postRequestBody.getContent());
-        if (postRequestBody.getImageUrl() != null)
-            existingPost.setImageUrl(postRequestBody.getImageUrl());
-        if (postRequestBody.getVideoUrl() != null)
-            existingPost.setVideoUrl(postRequestBody.getVideoUrl());
+        Post existingPost = fetchUnArchivedAndLivePostById(postId);
+
+        validateModificationAuthorization(existingPost, "patch");
+
+        patchPostFields(existingPost, postRequestBody);
         existingPost.setPostLastUpdatedDate(Instant.now());
+
         Post updatedPost = this.postRepository.save(existingPost);
 
         return PostMapper.postToPostResponseBody(updatedPost);
@@ -217,64 +159,164 @@ public class PostServiceImpl implements PostService {
 
     @Override
     @Transactional
-    public PostResponseBody togglePostVisibility(Long postId, boolean isLive) {
+    public PostResponseBody archivePost(Long postId) {
+
+        Post existingPost = fetchUnArchivedAndLivePostById(postId);
+        validateModificationAuthorization(existingPost, "archive");
+
+        existingPost.setArchived(true);
+        existingPost.setPostLastUpdatedDate(Instant.now());
+
+        Post archivedPost = this.postRepository.save(existingPost);
+        return PostMapper.postToPostResponseBody(archivedPost);
+    }
+
+    @Override
+    @Transactional
+    public PostResponseBody unarchivePost(Long postId) {
+
         Post post = this.postRepository
                         .findById(postId)
                         .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+
+        // Ensure the post is archived before unarchiving
+        if (!post.isArchived()) {
+            throw new InvalidPostStateException("Post is not archived and cannot be unarchived.");
+        }
+
+        // Allow unarchiving if the user owns the post or has admin/moderator role
+        validateModificationAuthorization(post, "unarchive");
+
+        post.setArchived(false);
+        post.setPostLastUpdatedDate(Instant.now());
+
+        Post unarchivedPost = this.postRepository.save(post);
+        return PostMapper.postToPostResponseBody(unarchivedPost);
+    }
+
+    @Override
+    @Transactional(readOnly = true)
+    public PageableResponse<PostResponseBody> getArchivedPosts(Integer pageNumber, Integer pageSize, String sortBy, String sortDirection) {
+
+        User authenticatedUser = AuthUtil.getAuthenticatedUser();
+
+        boolean isAdminOrModerator = authenticationFacade.hasAnyRole("ADMIN", "MODERATOR");
+
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, resolveSort(sortBy, sortDirection));
+
+        Page<Post> pagePost = this.postRepository.findActiveAndArchivedPosts(pageable);
+
+        // Filter posts: Allow access only if the user is the owner or has privileged roles and map filtered posts to response DTOs
+        List<PostResponseBody> filteredPosts = pagePost.getContent().stream()
+                .filter(post -> authenticatedUser != null && post.getUser().getUserId().equals(authenticatedUser.getUserId()) || isAdminOrModerator)
+                .map(PostMapper::postToPostResponseBody)
+                .toList();
+
+        return buildPageableResponse(pagePost, filteredPosts);
+    }
+
+    @Override
+    @Transactional
+    public PostResponseBody togglePostVisibility(Long postId, boolean isLive) {
+        Post post = fetchPostById(postId);
+
+        validateModificationAuthorization(post, "toggle visibility of");
+
         post.setLive(isLive);
         post.setPostLastUpdatedDate(Instant.now());
+
         Post updatedPost = this.postRepository.save(post);
         return PostMapper.postToPostResponseBody(updatedPost);
     }
 
     @Override
     @Transactional
+    public PostResponseBody setAsMemberPost(Long postId) {
+        User authenticatedUser = AuthUtil.getAuthenticatedUser();
+
+        Post existingPost = fetchUnArchivedAndLivePostById(postId);
+
+        // Ensure the post belongs to the authenticated user
+        if (authenticatedUser != null && !existingPost.getUser().getUserId().equals(authenticatedUser.getUserId())) {
+            throw new UnAuthorizedException("You can only mark your own posts as member posts.");
+        }
+
+        // Mark the existingPost as a member post
+        existingPost.setMemberPost(true);
+        existingPost.setPostLastUpdatedDate(Instant.now());
+
+        Post updatedPost = this.postRepository.save(existingPost);
+        return PostMapper.postToPostResponseBody(updatedPost);
+    }
+    
+    @Override
+    @Transactional
     public void deletePost(Long postId) {
-        Post existingPost = this.postRepository
-                                .findById(postId)
-                                .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+
+        Post existingPost = fetchPostById(postId);
+
+        // Allow deletion if the user owns the post OR has privileged roles
+        validateModificationAuthorization(existingPost, "delete");
+
         this.postRepository.delete(existingPost);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<PostResponseBody> getPostsByUser(Long userId) {
+    public PageableResponse<PostResponseBody> getPostsByUser(Long userId, Integer pageNumber, Integer pageSize, String sortBy, String sortDirection) {
         User existingUser = this.userRepository
-                .findById(userId)
-                .orElseThrow(() -> new ResourceNotFoundException("User", "userId", userId));
-        List<Post> existingPostList = this.postRepository.findByUser(existingUser);
-        return existingPostList.stream()
-                               .map((eachPost) -> this.modelMapper.map(eachPost, PostResponseBody.class))
-                               .collect(Collectors.toList());
+                                .findById(userId)
+                                .orElseThrow(() -> new ResourceNotFoundException("User", "userId", userId));
+
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, resolveSort(sortBy, sortDirection));
+
+        Page<Post> pagePost = this.postRepository.findByUser(existingUser, pageable);
+
+        List<PostResponseBody> postResponseBodyList = pagePost.getContent().stream()
+                .map(post -> this.modelMapper.map(post, PostResponseBody.class))
+                .toList();
+
+        return buildPageableResponse(pagePost, postResponseBodyList);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<PostResponseBody> getPostsByCategory(Long categoryId) {
-        Category existingCategory = this.categoryRepository
-                                        .findById(categoryId)
-                                        .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", categoryId));
-        List<Post> existingPostList = this.postRepository.findByCategory(existingCategory);
-        return existingPostList.stream()
+    public PageableResponse<PostResponseBody> getPostsByCategory(Long categoryId, Integer pageNumber, Integer pageSize, String sortBy, String sortDirection) {
+        Category existingCategory = fetchCategoryById(categoryId);
+
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, resolveSort(sortBy, sortDirection));
+
+        Page<Post> pagePost = this.postRepository.findByCategory(existingCategory, pageable);
+
+        List<PostResponseBody> postResponseBodyList = pagePost.stream()
                                .map((eachPost) -> this.modelMapper.map(eachPost, PostResponseBody.class))
                                .collect(Collectors.toList());
+
+        return buildPageableResponse(pagePost, postResponseBodyList);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public List<PostResponseBody> searchPostsByTitle(String keyword) {
-        List<Post> existingPostList = this.postRepository.searchKeyOnTitle("%" + keyword + "%");
-        return existingPostList.stream()
+    public PageableResponse<PostResponseBody> searchPostsByTitle(String keyword, Integer pageNumber, Integer pageSize, String sortBy, String sortDirection) {
+
+        Pageable pageable = PageRequest.of(pageNumber, pageSize, resolveSort(sortBy, sortDirection));
+
+        Page<Post> pagePost = this.postRepository.searchKeyOnTitle("%" + keyword + "%", pageable);
+
+        List<PostResponseBody> postResponseBodyList = pagePost.stream()
                 .map((eachPost) -> this.modelMapper.map(eachPost, PostResponseBody.class))
                 .collect(Collectors.toList());
+
+        return buildPageableResponse(pagePost, postResponseBodyList);
     }
 
     @Override
     @Transactional
     public PostResponseBody deactivatePost(Long postId) {
-        Post existingPost = this.postRepository
-                        .findById(postId)
-                        .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+
+        Post existingPost = fetchPostById(postId);
+
+        validateModificationAuthorization(existingPost, "deactivate");
 
         Instant currentTimestamp = Instant.now();
         existingPost.setPostDeleted(true);
@@ -285,6 +327,7 @@ public class PostServiceImpl implements PostService {
             comment.setCommentDeletionTimestamp(currentTimestamp);
         });
         existingPost.setPostLastUpdatedDate(Instant.now());
+
         Post updatedPost = this.postRepository.save(existingPost);
         return PostMapper.postToPostResponseBody(updatedPost);
     }
@@ -292,25 +335,123 @@ public class PostServiceImpl implements PostService {
     @Override
     @Transactional
     public PostResponseBody activatePost(Long postId) {
-        Post existingPost = this.postRepository
-                        .findById(postId)
-                        .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
 
+        Post existingPost = fetchPostById(postId);
+
+        validateModificationAuthorization(existingPost, "activate");
+        
         Instant cutoff = Instant.now().minus(90, ChronoUnit.DAYS);
         if (existingPost.isPostDeleted() && existingPost.getPostDeletionTimestamp().isAfter(cutoff)) {
             existingPost.setPostDeleted(false);
             existingPost.setPostDeletionTimestamp(null);
             existingPost.getComments().forEach(comment -> {
-                if (comment.isCommentDeleted() && comment.getCommentDeletionTimestamp() != null && comment.getCommentDeletionTimestamp().isAfter(cutoff)) {
-                    comment.setCommentDeleted(false);
-                    comment.setCommentLastUpdatedDate(Instant.now());
-                    comment.setCommentDeletionTimestamp(null);
+                if (comment.isCommentDeleted() 
+                    && comment.getCommentDeletionTimestamp() != null 
+                    && comment.getCommentDeletionTimestamp().isAfter(cutoff)) {
+                        comment.setCommentDeleted(false);
+                        comment.setCommentLastUpdatedDate(Instant.now());
+                        comment.setCommentDeletionTimestamp(null);
                 }
             });
         }
         existingPost.setPostLastUpdatedDate(Instant.now());
-        Post updatedPost = this.postRepository.save(existingPost);
 
+        Post updatedPost = this.postRepository.save(existingPost);
         return PostMapper.postToPostResponseBody(updatedPost);
+    }
+
+    // ===================================== PRIVATE HELPERS =====================================
+
+    private Category fetchCategoryById(Long categoryId) {
+        return this.categoryRepository
+                   .findById(categoryId)
+                   .orElseThrow(() -> new ResourceNotFoundException("Category", "categoryId", categoryId));
+    }
+
+    private Post fetchPostById(Long postId) {
+        return this.postRepository
+                   .findById(postId)
+                   .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+    }
+
+    private Post fetchUnArchivedAndLivePostById(Long postId) {
+        return this.postRepository
+                   .findActiveAndUnarchivedPostsById(postId)
+                   .orElseThrow(() -> new ResourceNotFoundException("Post", "postId", postId));
+    }
+
+
+
+    private List<CommentResponseBody> fetchTopComments(Post post) {
+        return this.commentRepository.findTop2ByPost_PostIdOrderByCommentCreatedDateDesc(post.getPostId()).stream()
+                .map(comment -> this.modelMapper.map(comment, CommentResponseBody.class))
+                .collect(Collectors.toList());
+    }
+
+    private Sort resolveSort(String sortBy, String sortDirection) {
+        return sortDirection.equalsIgnoreCase(AppConstants.SORT_DIR)
+                ? Sort.by(sortBy).ascending()
+                : Sort.by(sortBy).descending();
+    }
+
+    private Set<Tag> fetchOrCreateTags(Set<String> tagNames) {
+        return tagNames.stream()
+                .map(tagName -> this.tagRepository.findByTagName(tagName)
+                        .orElseGet(() -> this.tagRepository.save(new Tag(tagName))))
+                .collect(Collectors.toSet());
+    }
+
+    private void validateModificationAuthorization(Post post, String action) {
+        User authenticatedUser = AuthUtil.getAuthenticatedUser();
+        boolean isAdminOrModerator = authenticationFacade.hasAnyRole("ADMIN", "MODERATOR");
+
+        if (authenticatedUser == null || (!post.getUser().getUserId().equals(authenticatedUser.getUserId()) && !isAdminOrModerator)) {
+            throw new UnAuthorizedException("You do not have permission to %s this post.", action);
+        }
+    }
+
+    private void updatePostFields(Post post, PostRequestBody postRequestBody) {
+        post.setPostTitle(postRequestBody.getTitle());
+        post.setPostContent(postRequestBody.getContent());
+        post.setImageUrl(postRequestBody.getImageUrl());
+        post.setVideoUrl(postRequestBody.getVideoUrl());
+
+        if (postRequestBody.getCategoryId() != null) {
+            Category category = fetchCategoryById(postRequestBody.getCategoryId());
+            post.setCategory(category);
+        }
+
+        if (postRequestBody.getTagNames() != null) {
+            Set<Tag> tags = fetchOrCreateTags(postRequestBody.getTagNames());
+            post.setTags(tags);
+        }
+    }
+
+    private void patchPostFields(Post post, PostRequestBody postRequestBody) {
+        if (postRequestBody.getTitle() != null) post.setPostTitle(postRequestBody.getTitle());
+        if (postRequestBody.getContent() != null) post.setPostContent(postRequestBody.getContent());
+        if (postRequestBody.getImageUrl() != null) post.setImageUrl(postRequestBody.getImageUrl());
+        if (postRequestBody.getVideoUrl() != null) post.setVideoUrl(postRequestBody.getVideoUrl());
+
+        if (postRequestBody.getCategoryId() != null) {
+            Category category = fetchCategoryById(postRequestBody.getCategoryId());
+            post.setCategory(category);
+        }
+
+        if (postRequestBody.getTagNames() != null) {
+            Set<Tag> tags = fetchOrCreateTags(postRequestBody.getTagNames());
+            post.setTags(tags);
+        }
+    }
+
+    private <T> PageableResponse<T> buildPageableResponse(Page<?> page, List<T> content) {
+        return new PageableResponse<>(
+                content,
+                page.getNumber(),
+                page.getSize(),
+                page.getTotalElements(),
+                page.getTotalPages(),
+                page.isLast()
+        );
     }
 }
